--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "@nuxtjs/toast": "^3.0.1",
+    "@nuxtjs/vendor": "^1.1.4",
+    "jquery": "^3.3.1",
     "net": "^1.0.2",
     "nuxt": "^1.0.0",
-    "vue-js-modal": "^1.3.13"
+    "nuxt-simple-line-icons": "^1.0.1"
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
     "node-sass": "^4.8.3",
     "nodemailer": "^4.6.4",
     "sass-loader": "^7.0.1",
-    "storyblok-nuxt": "0.0.3",
-    "vue-parallax": "^1.1.1"
+    "storyblok-nuxt": "0.0.3"
   }
 }
