--- a/package.json
+++ b/package.json
@@ -12,18 +12,17 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "@nuxtjs/dotenv": "^1.1.1",
     "@nuxtjs/toast": "^3.0.1",
     "@nuxtjs/vendor": "^1.1.4",
-    "jquery": "^3.3.1",
-    "net": "^1.0.2",
+    "contentful": "^6.1.0",
     "nuxt": "^1.0.0",
-    "nuxt-simple-line-icons": "^1.0.1"
+    "nuxt-simple-line-icons": "^1.0.1",
+    "vue-js-modal": "^1.3.13"
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
     "node-sass": "^4.8.3",
-    "nodemailer": "^4.6.4",
-    "sass-loader": "^7.0.1",
-    "storyblok-nuxt": "0.0.3"
+    "sass-loader": "^7.0.1"
   }
 }
