--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "cross-env": "^5.0.1",
     "node-sass": "^4.8.3",
-    "sass-loader": "^7.0.1"
+    "sass-loader": "^7.0.1",
+    "vue-parallax": "^1.1.1"
   }
 }
