--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
     "@nuxtjs/dotenv": "^1.1.1",
+    "@nuxtjs/markdownit": "^1.2.1",
     "@nuxtjs/toast": "^3.0.1",
     "@nuxtjs/vendor": "^1.1.4",
     "contentful": "^6.1.0",
